<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView app:cardUseCompatPadding="true"
    android:elevation="4dp"
    app:cardCornerRadius="5dp"
    android:padding="20sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="266dp"
        android:background="@drawable/backgroundgradinet"
        android:padding="16dp">


        <TextView
            android:id="@+id/t1"
            android:layout_width="260dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="119dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="14dp"
            android:text="@string/vehical"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="122dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:text="@string/purpose"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="14dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="14dp"
            android:text="@string/no_of_visitors"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="14dp"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="Name" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="Vehical no" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Purpose" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="Email id" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:text="No of visitors" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="-33dp"
            android:text="Time" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>